--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
       
       <ul class="navbar-nav flex-row me-3">
-        <li class="nav-item mx-2"><a class="nav-link text-light" href="file:///C:/Users/hp/Documents/WT-PROJECT/index.html">Home</a></li>
-        <li class="nav-item mx-2"><a class="nav-link text-light" href="file:///C:/Users/hp/Documents/WT-PROJECT/customer.html">Customers</a></li>
-        <li class="nav-item mx-2"><a class="nav-link text-light" href="file:///C:/Users/hp/Documents/WT-PROJECT/contact.html">Contact</a></li>
+        <li class="nav-item mx-2"><a class="nav-link text-light" href="Web-Technology/index.html">Home</a></li>
+        <li class="nav-item mx-2"><a class="nav-link text-light" href="Web-Technology/customer.html">Customers</a></li>
+        <li class="nav-item mx-2"><a class="nav-link text-light" href="Web-Technology/contact.html">Contact</a></li>
       </ul>
 
       <a href="discoverypg.html" class="btn btn-primary ms-2">Cloud Login</a>
